<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2017.  | Volodymyr Korobko | volodymyr.korobko@gmail.com
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="car"
            type="com.korobko.automotiveapp.models.Car" />
    </data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/car_add_vin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint_vin"
            android:text="@{car.vehicleIN}"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/car_add_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{car.make}"
            android:hint="@string/edit_text_hint_make"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            />
        <EditText
            android:id="@+id/car_add_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint_type"
            android:text="@{car.type}"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/car_add_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{car.color}"
            android:hint="@string/edit_text_hint_color"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            />
    </LinearLayout>
</ScrollView>

</layout>